--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ img {
   display: flex;
   align-items: center;
 }
-.main-nav {
+.nav {
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -91,10 +91,8 @@ img {
   align-items: center;
   margin-right: auto;
 }
-.header-link {
-  margin-right: 93px;
-}
-.header-list {
+
+.nav__list {
   display: flex;
   align-items: center;
   gap: 50px;
@@ -109,17 +107,15 @@ img {
   display: flex;
   align-items: center;
 }
-.header-group {
+.header__group {
   display: flex;
   align-items: center;
 }
-.menu-link:not(:last-child) {
+.header__group-link:not(:last-child) {
   margin-right: 50px;
 }
-.contact-link {
-  font-weight: 500;
-}
-.nav-link {
+
+.nav__link {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -129,8 +125,8 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.nav__link:hover,
+.nav__link:focus {
   color: var(--accent-txt-cl);
 }
 .current {
@@ -156,11 +152,13 @@ img {
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: var(--main-title-cl);
+
+  margin-right: 93px;
 }
-.logo-accent {
+.logo__accent {
   color: var(--accent-txt-cl);
 }
-.icon-header {
+.header_group-icon {
   fill: currentColor;
   margin-right: 10px;
 }
